[project]
name = "asyncio-https-proxy"
version = "0.1.0"
description = "Embeddable asyncio HTTPS forward proxy with request/response interception for Python applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
asyncio-https-proxy = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
  "src"
]