[project]
name = "asyncio-https-proxy"
version = "0.1.0"
description = "Embeddable asyncio HTTPS forward proxy with request/response interception for Python applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.7",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "myst-parser>=4.0.1",
    "piccolo-theme>=0.24.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.11",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
